--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="screen_main_display_text_tb_title">Channels</string>
     <string name="screen_main_display_text_new_episode">New Episode</string>
+    <string name="screen_main_display_text_episodes">%1s episode</string>
 
 </resources>
